fix scrolling on mobile

--- a/src/app/shared/scroll-pane/scroll-pane.component.scss
+++ b/src/app/shared/scroll-pane/scroll-pane.component.scss
@@ -1,7 +1,10 @@
 @import '../../../variables';
 
+:host {
+    overflow-y: auto;
+}
+
 .content-scroll-pane {
     height: 100%;
     min-height: 100%;
-    overflow-y: auto;
 }
